# esp32-s3-tailscale-enterprise

./: CMakeLists.txt  README-ESP.md  README.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/dns_server/: CMakeLists.txt
components/dns_server/include/: dns_server.h
components/microlink/: CMakeLists.txt  Kconfig  idf_component.yml
components/microlink/include/: microlink.h  microlink_internal.h  ml_config_httpd.h
components/microlink/src/: microlink.c  ml_config_html.h  ml_config_httpd.c  ml_coord.c  ml_derp.c  ml_net_io.c  ml_noise.c  ml_peer_nvs.c  ml_udp.c  ml_wg_mgr.c  ml_zerocopy.c  nacl_box.c
components/wireguard_lwip/: CMakeLists.txt
components/wireguard_lwip/src/: wireguard-platform-esp32.c  wireguard-platform.h  wireguard.c  wireguard.h  wireguardif.c  wireguardif.h
docs/: microlink-version.md
main/: CMakeLists.txt  config_storage.c  config_storage.h  factory_reset.c  factory_reset.h  log_buffer.c  log_buffer.h  main.c  scheduler_manager.c  scheduler_manager.h  tailscale_manager.c  tailscale_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/embedded_files/: app.js  index.html  styles.css
